fix: home page render issue | scrollbar style

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,27 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.father::-webkit-scrollbar {
+ 	width: 6px;
+ 	height: 6px;
+ 	/**/
+}
+
+.father::-webkit-scrollbar-track {
+ 	background: rgb(239, 239, 239);
+ 	border-radius: 2px;
+}
+
+.father::-webkit-scrollbar-thumb {
+ 	background: #bfbfbf;
+ 	border-radius: 6px;
+}
+
+.father::-webkit-scrollbar-thumb:hover {
+ 	background: #333;
+}
+
+/* .father::-webkit-scrollbar-corner {
+ 	background: #179a16;
+} */
